Fix blue layer on mobile tapping on gallery images

--- a/less/gallery.less
+++ b/less/gallery.less
@@ -221,6 +221,9 @@
 		padding: 20px 5px;
 	}
 
+	picture {
+		user-select: none;
+	}
 	img {
 		max-width: 950px;
 		width: 100%;
